fixed footer spacing

--- a/css/legend.css
+++ b/css/legend.css
@@ -5,8 +5,7 @@
     box-sizing: border-box;
     color: white;
     text-align: center;
-    padding: 0.5rem;
-    font-size: 1rem;
+    padding: 0.1rem;
   }
   
   .legend-container {
@@ -19,13 +18,12 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-bottom: 1rem;
   }
   
   .legend-item {
     display: flex;
     align-items: center;
-    margin: 1rem 0.5rem;
+    margin: 0.7rem 0.5rem;
   }
   
   .legend-shape {
@@ -68,6 +66,6 @@
   }
   
   .legend-item span {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     color: white;
   }  
